After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598562 - seed dumps core on GTK signal callback
seed dumps core on GTK signal callback
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-15 14:13 UTC by Iain Nicol
Modified: 2009-10-15 14:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
use the new seed import syntax (952 bytes, patch)
2009-10-15 14:13 UTC, Iain Nicol
none Details | Review

Description Iain Nicol 2009-10-15 14:13:27 UTC
Created attachment 145520 [details] [review]
use the new seed import syntax

If you have a seed extension with a signal callback, you get an error like
    ** ERROR **: Error in signal marshal. Unable to convert argument of type:
GdkEvent
when the callback is called.  Then abort() is called.  (Epiphany + Seed from
git, but probably also 2.28.)  For example, the Don't Close Tabs extension at
<http://blogs.gnome.org/racarr/2009/02/08/epiphany-seed-extensions/> causes
ephy to crash when you close the main window---this is an almost-minimal
example.

Working out the problem was a nightmare ;-) but the patch is trivial.  The real
problem is that Epiphany is using a deprecated, now-removed, syntax for seed
imports.
Comment 1 Xan Lopez 2009-10-15 14:15:52 UTC
Looks good, can you commit?
Comment 2 Iain Nicol 2009-10-15 14:27:03 UTC
No, I don't have an account or any GNOME commit permissions...
Comment 3 Xan Lopez 2009-10-15 14:39:47 UTC
Pushed to master, thanks for the patch!