Use the new syntax for seed imports

https://bugzilla.gnome.org/show_bug.cgi?id=598562

Signed-off-by: Xan Lopez <xan@gnome.org>